...
    "formName" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
...
            "state" : "translated",
            "value" : "Get tips for better habits"
          }
        }
      }
    },
    "Get Started" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Los geht's"
...
    "onboarding.continue" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        }
      }
    },
    "onboarding.customize_description" : {
      "extractionState" : "manual",
...
    "onboarding.page1.genderPlaceholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gender"
          }
        }
      }
    },
    "onboarding.page1.nameHint" : {
      "extractionState" : "manual",
...
    "onboarding.page6.enable" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enable"
          }
        }
      }
    },
    "onboarding.page6.enabled" : {
      "extractionState" : "manual",
...
    "onboarding.page6.location.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Location"
          }
        }
      }
    },
    "onboarding.page6.notEnabled" : {
      "extractionState" : "manual",
...
    "onboarding.page6.notifications.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notifications"
          }
        }
      }
    },
    "onboarding.page6.quickTour" : {
      "extractionState" : "manual",
...
    "onboarding.returning.stepCompleteProfile" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Complete Your Profile"
          }
        }
      }
    },
    "onboarding.returning.stepSetUpDevice" : {
      "extractionState" : "manual",
...
    "onboarding.welcomeBack.profileRestored" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile restored"
          }
        }
      }
    },
    "onboarding.welcomeBack.withName" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome back,"
          }
        }
      }
    },
    "onboarding.welcomeBack.withoutName" : {
      "extractionState" : "manual",
...
